<resources>
    <string name="app_name">Tasks</string>
    <string name="LoginTitle">Login</string>
    <string name="login_hint">username</string>
    <string name="password_hint">password</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>
    <string name="check_box_remember_me">Remember me</string>
    <string name="server_client_id">140462563326-14jrfmpu3mjecg2ecnre2diqg89b0bln.apps.googleusercontent.com</string>
    <string name="profile_pic_descr">profile picture</string>
    <string name="btn_signout">Изход</string>
    <string name="btn_notifications">Известия</string>
    <string name="btn_tasks">Задачи</string>
    <string name="btn_cards">Карти</string>
    <string name="btn_shedule">График</string>
    <string name="btn_proportions">Пропорции</string>
    <string name="btn_moderator">Модератор</string>
    <string name="btn_administrator">Администратор</string>
    <string name="btn_materials">Материали</string>
</resources>