<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_centerInParent="true"
            android:background="@drawable/main_window_style"
            android:layout_width="400sp"
            android:layout_height="500sp"
            android:orientation="vertical">
            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
            <TextView
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoginTitle"/>
            <EditText
                android:layout_marginHorizontal="20sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"/>
            <EditText
                android:layout_marginHorizontal="20sp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"/>
            <CheckBox
                android:id="@+id/CHB_REMEMBER"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_remember_me"/>
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BTN_LOGIN"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/loginButtonText"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BTN_REGISTER"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/registerButtonText"/>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/ERROR_WINDOW"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:orientation="vertical"
        android:background="@drawable/error_window_style"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp">

        <TextView
            android:id="@+id/ERROR_TEXT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </LinearLayout>
</RelativeLayout>